# buildroot_opencv_demo

./: CMakeLists.txt  README  main.cpp
rk3399demo/: Config.in  rk3399demo.mk
